--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
       </form>
     </main>
     <script
-      src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"
+      src=""
       async
       defer
     ></script>
